# crophg

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: data_splits_4scenarios_example.yaml  data_splits_4scenarios_inner_oof.yaml  data_splits_4scenarios_ood_cell.yaml
docs/: minimal_library_design.md
examples/: check_cropvig_entrypoints.py  step0_3_1a_migration.md  step0_3_1b_migration.md  step0_3_2a_migration.md  step0_3_2b_migration.md  step0_3_2c_migration.md  step1_3_3a_migration.md  step2_3_3b_migration.md  step3_3_4a_migration.md  step4_3_4b_migration.md  step_split_4scenarios_migration.md
scripts/: build_four_scenario_splits.py  cropvig_1.py  cropvig_2.py  cropvig_3.py  rerun_result_3_3b_3_4a_gpu2.sh  result_3_1a.py  result_3_1a_analysis.py  result_3_1b.py  result_3_1b_analysis.py  result_3_2a.py  result_3_2a_analysis.py  result_3_2b.py  result_3_2b_analysis.py  result_3_2c.py  result_3_2c_analysis.py  result_3_3a.py  result_3_3b.py  result_3_4a.py  result_3_4b.py  run_eight_traits_full_pipeline_gpu2.sh  run_eight_traits_resume_after_3_2c_gpu2.sh  run_result3_1_fullseason_hcg_multitrait.py  run_result3_3BC_light.py  run_result3_3_single_anchor_multitrait.py  run_result3_4_parallel_launcher.py  run_result3_4_phase_state.py  run_six_traits_full_pipeline_gpu2.sh  run_smoke_pipeline_gpu2.sh  run_smoke_pipeline_resume_after_3_2a_gpu2.sh  run_two_traits_full_pipeline_gpu2.sh  sommer_gblup_predict.R
src/: __init__.py
tests/: test_cropvig_1.py  test_cropvig_2.py  test_cropvig_3.py  test_data_splits_4scenarios.py  test_framework.py  test_optuna_reuse.py  (+11 more)
(+113 files in other folders)
