[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crophg"
version = "0.1.0"
description = "Minimal research library for crop H/G manuscript analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Wang Yuze" }
]
dependencies = []

[project.scripts]
crophg = "crophg.cli:main"
cropvig-1 = "crophg.public.cropvig_1:main"
cropvig-2 = "crophg.public.cropvig_2:main"
cropvig-3 = "crophg.public.cropvig_3:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
